--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,12 @@ h1 {
     margin-right: 10px;
 }
 
+.startups .ozon {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
 .startups .ssgaming {
     width: 40px;
     height: 50px;
@@ -608,6 +614,13 @@ h1 {
     
     .startups .ssgaming {
         width: 60px;
+        height: 70px;
+        margin-left: 2px;
+        margin-right: 10px;
+    }
+
+    .startups .ozon {
+        width: 70px;
         height: 70px;
         margin-left: 2px;
         margin-right: 10px;
